# test_error

./: pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/test_error/: MainActivity.kt
integration_test/: simple_test.dart
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: profile.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs  profile.rs
rust/src/api/: error.rs  mod.rs  profile.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_test_error.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_test_error.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
