[package]
name = "rust_lib_test_error"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.4.0"
snafu = { version = "0.8.4", features = ["backtrace"] }
sea-orm = { version = "1.0.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.40.0", features = ["full"] }
